# AE_Bayesian

./: .gitignore  PRESENTATION_SUMMARY.md  README.md  RESEARCH_REPORT.md  comprehensive_analysis_visualization.py  pyproject.toml  run_analysis.py  run_experiment.py  run_temperature_cv_analysis_rye.py
src/ae_bayesian/: __init__.py
src/ae_bayesian/analysis/: __init__.py  fair_comparison_analysis.py  statistical_analysis.py
src/ae_bayesian/config/: __init__.py  experiment_config.py
src/ae_bayesian/experiments/: __init__.py  main.py  simple_experiment.py
src/ae_exp2/: __init__.py
src/ae_exp2/analysis/: __init__.py  fair_comparison_analysis.py  improved_analysis.py  statistical_analysis.py
src/ae_exp2/config/: __init__.py  experiment_config.py
src/ae_exp2/experiments/: __init__.py  main.py  simple_experiment.py
