[project]
name = "ae-exp2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shotarai", email = "second.arasho@outlook.jp" }
]
dependencies = [
    "pandas>=2.3.0",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "pymc>=5.23.0",
    "openai>=1.93.0",
    "python-dotenv>=1.1.1",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ae_bayesian"]
